[project]
name = "prompttokenizer"
version = "0.1.0"
description = "FastAPI microservice that tokenizes text for various LLM models and exposes token counts, model comparison, and pricing endpoints."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "gunicorn>=22.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    "psutil>=7.2.2",
]

[project.scripts]
start = "run:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 200
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # style errors
    "F",   # real bugs
    "B",   # bugbear
    "I",   # imports
    "UP",  # modern python
    "C4",  # comprehensions
    "SIM", # simplify
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
